tests/neg-custom-args/captures/scoped-caps2.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:5:23 ----------------------------------
5 |  val _: (x: C) => C = b // error
  |                       ^
  |                Found:    (b : C => C)
  |                Required: (x: C^) =>² C^²
  |
  |                Note that capability cap is not included in capture set {cap²}.
  |
  |                where:    => and cap   refer to a root capability in the type of value b
  |                          =>² and cap² refer to a root capability in the type of value _$1
  |                          ^            refers to the universal root capability
  |                          ^²           refers to a root capability associated with the result type of (x: C^): C^²
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:6:18 ----------------------------------
6 |  val _: C => C = a // error
  |                  ^
  |        Found:    (a : (x: C) => C)
  |        Required: C^ =>² C^²
  |
  |        Note that capability cap is not included in capture set {cap²}.
  |
  |        where:    => and cap   refer to a root capability in the type of value a
  |                  =>² and cap² refer to a root capability in the type of value _$2
  |                  ^            refers to the universal root capability
  |                  ^²           refers to a root capability classified as SharedCapability in the type of value _$2
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:8:18 ----------------------------------
8 |  val _: C => C = (x: C) => a(x) // error
  |                  ^^^^^^^^^^^^^^
  |          Found:    (x: C^) ->{a} C^²
  |          Required: C^ => C^³
  |
  |          Note that capability cap is not included in capture set {cap²}
  |          because cap is not visible from cap² in value _$4.
  |
  |          where:    =>          refers to a root capability in the type of value _$4
  |                    ^           refers to the universal root capability
  |                    ^² and cap  refer to a root capability associated with the result type of (x: C^): C^²
  |                    ^³ and cap² refer to a root capability classified as SharedCapability in the type of value _$4
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:14:18 ---------------------------------
14 |  val _: C -> C = a // error
   |                  ^
   |        Found:    (a : (x: C) -> C)
   |        Required: C^ -> C^²
   |
   |        Note that capability cap is not included in capture set {cap²}
   |        because cap is not visible from cap² in value _$6.
   |
   |        where:    ^ and cap   refer to the universal root capability
   |                  ^² and cap² refer to a root capability classified as SharedCapability in the type of value _$6
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:16:29 ---------------------------------
16 |  val _: C -> C = (x: C) => a(x) // error
   |                            ^^^^
   |Found:    C^
   |Required: C^²
   |
   |Note that capability cap is not included in capture set {cap²}
   |because cap in an enclosing function is not visible from cap² in value _$8.
   |
   |where:    ^ and cap   refer to a root capability classified as SharedCapability created in anonymous function of type (x: C): C when instantiating method apply's type (x: C^³): C^⁴
   |          ^² and cap² refer to a root capability classified as SharedCapability in the type of value _$8
   |
   | longer explanation available when compiling with `-explain`
